--- a/style.css
+++ b/style.css
@@ -266,17 +266,15 @@ a:hover {
 body::-webkit-scrollbar {
   width: 6px;
   background: linear-gradient(to bottom right, #0f2027, #203a43, #2c5364);
-  /*Change*/
-  scrollbar-color: rgba(79,195,247,0.7) transparent;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: rgba(79,195,247,0.7);
+  background: #888; /* color of the thumb */
   border-radius: 6px;
 }
 
 body::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(3,169,244,0.9);
+  background: #555; /* color of the thumb on hover */
 }
 
 /* Full page scrollbar - Firefox */
